--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,6 +1,5 @@
 @import './node_modules/bootstrap/scss/bootstrap';
 
 body {
-  background-color: theme-color(danger);
-  color: color($warning);
+  background-color: theme-color(info);
 }
