--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,5 +1,5 @@
-@import './node_modules/bootstrap/scss/bootstrap';
+//@import './node_modules/bootstrap/scss/bootstrap';
 
 body {
-  background-color: theme-color(info);
+  background-color: pink;
 }
